--- a/package.json
+++ b/package.json
@@ -31,53 +31,42 @@
     "npm": "3.8.9"
   },
   "dependencies": {
-    "body-parser": "1.15.1",
-    "express": "4.13.4",
-    "helmet": "2.1.0",
-    "history": "2.1.1",
-    "lodash": "4.13.1",
-    "moment": "2.13.0",
-    "node-fetch": "1.5.3",
-    "react": "15.0.2",
-    "react-dom": "15.0.2",
-    "react-redux": "4.4.5",
-    "react-router": "2.4.0",
-    "redis": "2.6.1",
-    "redux": "3.5.2",
-    "redux-thunk": "2.1.0",
-    "whatwg-fetch": "1.0.0"
+    "body-parser": "1.16.1",
+    "express": "4.14.1",
+    "helmet": "3.4.0",
+    "radium": "0.18.1",
+    "react": "15.4.2",
+    "react-dom": "15.4.2",
+    "react-fontawesome": "1.5.0",
+    "react-logger": "1.1.0",
+    "react-redux": "5.0.2",
+    "react-router": "3.0.2",
+    "redux": "3.6.0",
+    "redux-saga": "0.14.3",
+    "whatwg-fetch": "2.0.2"
   },
   "devDependencies": {
-    "babel-core": "6.4.5",
-    "babel-loader": "6.2.4",
-    "babel-polyfill": "6.9.0",
-    "babel-preset-es2015": "6.9.0",
-    "babel-preset-react": "6.5.0",
-    "babel-register": "6.9.0",
+    "babel-core": "6.23.1",
+    "babel-loader": "6.3.2",
+    "babel-polyfill": "6.23.0",
+    "babel-preset-es2015": "6.22.0",
+    "babel-preset-react": "6.23.0",
+    "babel-preset-stage-0": "6.22.0",
+    "babel-register": "6.23.0",
     "chai": "3.5.0",
-    "css-loader": "0.23.1",
-    "enzyme": "2.3.0",
-    "eslint": "2.10.2",
-    "eslint-config-airbnb": "9.0.1",
-    "eslint-plugin-import": "1.8.0",
-    "eslint-plugin-jsx-a11y": "1.2.2",
-    "eslint-plugin-react": "5.1.1",
-    "extract-text-webpack-plugin": "1.0.1",
-    "file-loader": "0.8.5",
-    "html-webpack-plugin": "2.17.0",
-    "ignore-styles": "2.0.0",
-    "mocha": "2.4.5",
-    "node-sass": "3.7.0",
-    "postcss-loader": "0.9.1",
-    "postcss-scss": "0.1.8",
-    "precss": "1.4.0",
-    "react-addons-test-utils": "15.0.2",
-    "redux-devtools": "3.3.1",
-    "sass-loader": "3.2.0",
-    "sinon": "1.17.4",
-    "sinon-as-promised": "4.0.0",
+    "enzyme": "2.7.1",
+    "eslint": "3.15.0",
+    "eslint-config-airbnb": "14.1.0",
+    "eslint-plugin-import": "2.2.0",
+    "eslint-plugin-jsx-a11y": "4.0.0",
+    "eslint-plugin-react": "6.10.0",
+    "extract-text-webpack-plugin": "2.0.0-rc.3",
+    "file-loader": "0.10.0",
+    "html-webpack-plugin": "2.28.0",
+    "mocha": "3.2.0",
+    "react-addons-test-utils": "15.4.2",
+    "sinon": "1.17.7",
     "sinon-chai": "2.8.0",
-    "style-loader": "0.13.1",
-    "webpack": "2.1.0-beta.7"
+    "webpack": "2.2.1"
   }
 }
