--- a/package.json
+++ b/package.json
@@ -62,6 +62,7 @@
     "extract-text-webpack-plugin": "2.0.0-rc.3",
     "file-loader": "0.10.0",
     "html-webpack-plugin": "2.28.0",
+    "ignore-styles": "5.0.1",
     "mocha": "3.2.0",
     "react-addons-test-utils": "15.4.2",
     "sinon": "1.17.7",
