--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
     "whatwg-fetch": "2.0.2"
   },
   "devDependencies": {
+    "babel-cli": "6.23.0",
     "babel-core": "6.23.1",
     "babel-loader": "6.3.2",
     "babel-polyfill": "6.23.0",
