--- a/.travis.yml
+++ b/.travis.yml
@@ -2,6 +2,9 @@ language: node_js
 node_js:
   - "6"
 
+before_script:
+ - wget -qO- https://toolbelt.heroku.com/install.sh | sh
+
 
 script:
   -  npm test && npm run build && npm run deploy
