--- a/.travis.yml
+++ b/.travis.yml
@@ -2,11 +2,10 @@ language: node_js
 node_js:
   - "6"
 
+sudo: required
+
 before_script:
-  - wget https://cli-assets.heroku.com/branches/stable/heroku-linux-amd64.tar.gz -O heroku.tar.gz
-  - mkdir -p /usr/local/lib
-  - tar -xvzf heroku.tar.gz -C /usr/local/lib
-  - /usr/local/lib/heroku/install
+  - wget -qO- https://toolbelt.heroku.com/install-ubuntu.sh | sh
 
 script:
   -  npm test && npm run build && npm run deploy
