--- a/.travis.yml
+++ b/.travis.yml
@@ -6,6 +6,7 @@ sudo: required
 
 before_script:
   - wget -qO- https://toolbelt.heroku.com/install-ubuntu.sh | sh
+  - heroku -v
 
 script:
   -  npm test && npm run build && npm run deploy
