--- a/.travis.yml
+++ b/.travis.yml
@@ -24,7 +24,8 @@ before_deploy:
   - git remote
   - git add -A
   - git status
-  - git commit -m "$(git log -1)"
+  - export COMMIT_MESSAGE=$(git log -1 --pretty=%B)
+  - git commit -m "$COMMIT_MESSAGE"
 
 deploy:
   provider: heroku
