--- a/package.json
+++ b/package.json
@@ -65,6 +65,7 @@
     "file-loader": "0.10.0",
     "html-webpack-plugin": "2.28.0",
     "ignore-styles": "5.0.1",
+    "jsdomify": "3.1.0",
     "mocha": "3.2.0",
     "react-addons-test-utils": "15.4.2",
     "sinon": "1.17.7",
