--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
   },
   "dependencies": {
     "body-parser": "1.16.1",
+    "ejs": "2.5.6",
     "express": "4.14.1",
     "helmet": "3.4.0",
     "radium": "0.18.1",
