--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "ejs": "2.5.6",
     "express": "4.14.1",
     "helmet": "3.4.0",
+    "isomorphic-fetch": "2.2.1",
     "radium": "0.18.1",
     "react": "15.4.2",
     "react-dom": "15.4.2",
@@ -43,8 +44,7 @@
     "react-redux": "5.0.2",
     "react-router": "3.0.2",
     "redux": "3.6.0",
-    "redux-saga": "0.14.3",
-    "whatwg-fetch": "2.0.2"
+    "redux-saga": "0.14.3"
   },
   "devDependencies": {
     "babel-cli": "6.23.0",
