--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "express": "4.14.1",
     "helmet": "3.4.0",
     "isomorphic-fetch": "2.2.1",
+    "moment": "2.17.1",
     "radium": "0.18.1",
     "react": "15.4.2",
     "react-dom": "15.4.2",
